--- a/angular.json
+++ b/angular.json
@@ -91,7 +91,8 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              "src/app/stub"
+              "src/app/stub",
+              "src/app/stub/images"
             ],
             "styles": [
               "@angular/material/prebuilt-themes/indigo-pink.css",
